<resources>
    <string name="app_name">RxAndroidSimpleExample</string>
    <string name="startActivity1">Start Activity 1</string>
    <string name="startActivity2">Start Activity 2</string>
    <string name="startActivity3">Start Activity 3</string>
    <string name="startActivity4">Start Activity 4</string>
    <string name="subscribe">Subscribe</string>
    <string name="insert_text">Insert Text</string>
    <string name="stop_subscription">Stop Subscription</string>
    <string name="no_error">NO ERROR</string>
    <string name="throw_error">THROW ERROR</string>
</resources>
