<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zachbartholomew.rxandroidsimpleexample.SampleRxActivity4">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/insert_text"
            android:inputType="text|textMultiLine"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:text="@string/subscribe"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="16dp"
            android:text="@string/stop_subscription"
            android:enabled="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/startButton"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/startButton"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/startButton"/>

        <ToggleButton
            android:id="@+id/errorToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stopButton"
            android:layout_centerInParent="true"
            android:textOff="@string/no_error"
            android:textOn="@string/throw_error"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/stopButton"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/stopButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stopButton"/>



    </android.support.constraint.ConstraintLayout>
</layout>
